# handeye_calib_camodocal

./: .clang-format  .travis.yml  CMakeLists.txt  LICENSE  README.md  Readme.md  package.xml  travis.yml
example/: CalibratedTransform.yml  TransformPairsOutput.yml  terminal_session.txt
launch/: handeye.launch  handeye_example.launch  handeye_file.launch  handeye_tf.launch
scripts/: test_publisher.py
src/: handeye_calibration.cpp  handeye_calibration_auto.cpp
src/camodocal/: EigenUtils.h
src/camodocal/calib/: DualQuaternion.h  HandEyeCalibration.cc  HandEyeCalibration.h  HandEyeCalibration_test.cc  HandEyeCalibration_test2.cc  Makefile  QuaternionMapping.h
srv/: HandEyeCalibCommand.srv
